Cleaning Up Interaction Messages

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/FraserMap
+LastLevel=/Game/TopDownBP/Maps/BarnabasMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -106,6 +106,8 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InteractiveObject_BP.InteractiveObject_BP
 
 [RootWindow]
 ScreenPosition=X=1257.000 Y=0.000
@@ -684,8 +686,9 @@ HierarchicalLODUtilities.TimeStamp=2017.09.29-19.34.38
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/FraserMap
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/BarnabasMap
+MRUItem1=/Game/TopDownBP/Maps/FraserMap
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCategories]
 TopDownCharacter_C.Tick=True
@@ -857,7 +860,7 @@ K2Node_FunctionResult.Outputs=True
 ByteProperty.Variable=True
 ByteProperty.DefaultValueCategory=True
 EdGraphNode_Comment.GraphNodeDetail=True
-EdGraphNode_Comment.Comment=True
+EdGraphNode_Comment.Comment=False
 K2Node_GetInputAxisKeyValue.Input=True
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
@@ -1633,6 +1636,14 @@ Item_Data_UI_C.Performance=True
 Item_Data_UI_C.Render Transform=True
 Item_Data_UI_C.Navigation=True
 InteractiveObject_C.Default=True
+ItemDrop_BP_C.Default=True
+InteractiveObject_BP_C.Tick=True
+InteractiveObject_BP_C.Default=True
+InteractiveObject_BP_C.Rendering=True
+InteractiveObject_BP_C.Replication=True
+InteractiveObject_BP_C.Input=True
+InteractiveObject_BP_C.Actor=True
+InteractiveObject_BP_C.TransformCommon=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1650,9 +1661,9 @@ Uncategorized=False
 User Created=False
 
 [DetailCustomWidgetExpansion]
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 MyChar_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 TopDownCharacter_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
@@ -1710,7 +1721,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
 ItemDrop_BP_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 UserDefinedStruct=
 UserDefinedStruct=
-StructProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+StructProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 Item_Data_UI_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
@@ -1733,8 +1744,8 @@ Visual=
 Object="\"Object.Selected Item\" \"Object.Selected Item\" "
 Object=
 MyChar_C="\"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" \"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" "
-Character="\"Object.Inventory\" \"Object.Inventory\" "
-Pawn="\"Object.Inventory\" \"Object.Inventory\" "
+Character="\"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" \"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" "
+Pawn="\"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" \"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" "
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[13]\" "
@@ -1747,16 +1758,17 @@ UserWidget=
 TextBlock=
 TextLayoutWidget=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-TopDownCharacter_C="\"Object.Inventory\" \"Object.Inventory\" "
+TopDownCharacter_C="\"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" \"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 ItemDrop_BP_C="\"Object.Item Data\" \"Object.Item Data\" "
-Item_Data_UI_C=
+Item_Data_UI_C="\"Object.Item Data\" \"Object.Item Data\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 InteractiveObject_C=
+InteractiveObject_BP_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Inventory/MyChar.MyChar=0
@@ -1776,6 +1788,11 @@ InteractiveObject_C=
 /Game/TopDownBP/Blueprints/KeycardType.KeycardType=0
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
 /Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject=0
+/Game/TopDownBP/Blueprints/Interact_BPI.Interact_BPI=0
+/Game/TopDownBP/Blueprints/Inventory_Struct.Inventory_Struct=0
+/Game/TopDownBP/Blueprints/Inventory_UI.Inventory_UI=0
+/Game/TopDownBP/Blueprints/Item_Data_UI.Item_Data_UI=0
+/Game/TopDownBP/Blueprints/ItemDrop_BP.ItemDrop_BP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject;
